kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/argocd/argocd/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  labels:
    app.kubernetes.io/name: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - argocd.tk831.net
  rules:
  - host: argocd.tk831.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
